de-ce-asamblare: Rename print_n_square to print_n_xor

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -120,7 +120,7 @@ razvan.deaconescu@cs.pub.ro}
   \begin{itemize}
     \item \texttt{asm/hello.asm}
     \item \texttt{asm/print\_n.asm}
-    \item \texttt{asm/print\_n\_square.asm}
+    \item \texttt{asm/print\_n\_offset.asm}
   \end{itemize}
 \end{frame}
 
