de-ce-asamblare: Add slide on Razvan story

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -168,6 +168,12 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Povești, povestiri, amintiri}
+  \begin{itemize}
+    \item Minunata călătorie a lui Răzvan ,,Senpai'' Deaconescu în lumea calculatoarelor
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Cum învăț/cum aprofundez}
   \begin{itemize}
     \pause \item Nu învăța ceva ca să înveți ceva / că e bine / că se caută / că vrei să știi.
