de-ce-asamblare: Add links to resources

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -195,4 +195,11 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Mulțumesc!}
+  \begin{itemize}
+    \item \tiny{\url{http://www.slideshare.net/razvandeaconescu/de-ce-s-tii-limbaj-de-asamblare}}
+    \item \tiny{\url{https://github.com/razvand/slides/tree/master/de-ce-asamblare}}
+  \end{itemize}
+\end{frame}
+
 \end{document}
