de-ce-asamblare: Add reference to CS:APP

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -182,6 +182,7 @@ razvan.deaconescu@cs.pub.ro}
     \pause \item site-uri de tip wargames
     \pause \item profiling la aplicații
     \pause \item programează pe platforme ARM (sau MIPS): Raspberry Pi
+    \pause \item Randal E. Bryant, David R. O'Hallaron: Computer Systems: A Programmer's Perspective
   \end{itemize}
 \end{frame}
 
