de-ce-asamblare: Use correct name print_n_xor in slides

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -120,7 +120,7 @@ razvan.deaconescu@cs.pub.ro}
   \begin{itemize}
     \item \texttt{asm/hello.asm}
     \item \texttt{asm/print\_n.asm}
-    \item \texttt{asm/print\_n\_offset.asm}
+    \item \texttt{asm/print\_n\_xor.asm}
   \end{itemize}
 \end{frame}
 
