de-ce-asamblare: Add slide on assembly concepts

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -99,6 +99,18 @@ razvan.deaconescu@cs.pub.ro}
   \end{figure}
 \end{frame}
 
+\begin{frame}{Concepte}
+  \begin{itemize}
+    \item memorie
+    \item adresă de memorie
+    \item cod mașină (instrucțiuni)
+    \item procesor
+    \item registre
+    \item operații / mnemonici
+    \item operanzi: registre, adrese de memorie, valori
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Bazele limbajului de asamblare}
   \begin{itemize}
     \pause \item datele rezidă în memorie
