de-ce-asamblare: Add quote on solving problems

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -204,8 +204,14 @@ razvan.deaconescu@cs.pub.ro}
     \pause \item Strică lucrurile.
     \pause \item Detaliile fac diferența.
     \pause \item Răbdarea este o virtute.
-    \pause \item Laborator de introducere în limbaj de asamblare: joi, 25 august 2016, ora 21:00
   \end{itemize}
+  \vspace{5mm}
+  \centering
+  \pause \textit{When solving problems, dig at the roots instead of just hacking at the leaves.} \\
+  \vspace{3mm}
+  \hfill \textit{Anthony J. D'Angelo} \\
+  \vspace{5mm}
+  \pause Laborator de introducere în limbaj de asamblare: joi, 25 august 2016, ora 21:00
 \end{frame}
 
 \begin{frame}{Mulțumesc!}
