Complete slides for science and art presentation

--- a/stiinta-si-arta/stiinta-si-arta.tex
+++ b/stiinta-si-arta/stiinta-si-arta.tex
@@ -32,15 +32,35 @@ razvan@rosedu.org}
 
 \begin{frame}{De ce există prezentări și discursuri?}
   \begin{itemize}
+    \pause
+    \item Scott Meyers: \textit{Things that matter}
+    \pause
     \item conținutul este una
+    \pause
     \item livrarea și experiența personală sunt alta
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Ce anume face din cineva un programator bun?}
+  \begin{itemize}
+    \pause
+    \item cunoștințe
+    \item experiență anterioară
+    \item rigoare
+    \item controlul utilitarelor
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Ce anume face din cineva un programator excepțional?}
+  \begin{itemize}
+    \pause
+    \item vede pădurea, nu doar copacii
+    \item creativitate
+    \item disciplină
+    \item intuiție
+    \item învățare continuă
+    \item vede și utilizatorii, nu doar tehnologia
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Ce e mai bine?}
@@ -94,19 +114,33 @@ razvan@rosedu.org}
 
 \begin{frame}{Programarea ca știință}
   \begin{itemize}
-    \item TODO
+    \pause
+    \item limbaje de programare: sintaxă, semantică
+    \item bune practici
+    \item tehnici de programare
+    \item design patterns
+    \item coding style
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Programarea ca artă}
   \begin{itemize}
-    \item TODO
+    \pause
+    \item the best tool for the best job
+    \item trade off-uri: limbaj de programare, framework-uri, arhitectură
+    \item accentul pe utilizator
+    \item hacking
+    \item frumusețea programului
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Pick-Up Artists (PUA)}
   \begin{itemize}
-    \item TODO
+    \pause
+    \item ,,artiștii agățării''
+    \item reguli/recomandări: \textit{inner game}, \textit{outer game}, \textit{natural game}
+    \item depinde de persoană
+    \item \textit{confidence}
   \end{itemize}
 \end{frame}
 
@@ -118,6 +152,7 @@ razvan@rosedu.org}
 
 \begin{frame}{Știință sau artă}
   \begin{itemize}
+    \pause
     \item falsă dihotomie, \textit{chicken and egg}
     \item la pachet
   \end{itemize}
@@ -125,13 +160,22 @@ razvan@rosedu.org}
 
 \begin{frame}{De ce (nu) știință?}
   \begin{itemize}
+    \pause
     \item bun, dar niciodată excelent
+    \item reguli clare
+    \item predictibilitate
+    \item se poate învăța din surse existente
+    \item durează
   \end{itemize}
 \end{frame}
 
 \begin{frame}{De ce (nu) artă?}
   \begin{itemize}
-    \item rezultate senzaționale dar impredictibile
+    \pause
+    \item rezultate incerte (posibil extraordinare, posibil nu)
+    \item se învață doar practicând
+    \item subiectivă, ține de fiecare persoană
+    \item durează
   \end{itemize}
 \end{frame}
 
@@ -153,34 +197,54 @@ razvan@rosedu.org}
 
 \begin{frame}{Omul cu 1000 de fețe}
   \begin{itemize}
+    \pause
     \item autoritar sau consensual
+    \pause
     \item serios sau amuzant/relaxat
+    \pause
     \item detașat sau implicat
+    \pause
     \item idealist sau realist
+    \pause
     \item răbdător sau expeditiv
+    \pause
     \item intransigent sau înțelegător
+    \pause
     \item individualist sau altruist
   \end{itemize}
 \end{frame}
 
 \begin{frame}{,,Nu mă pricep la asta''}
   \begin{itemize}
-    \item TODO
+    \pause
+    \item ,,utter and complete BS'' (Răzvan Deaconescu, 13 mai 2017)
+    \pause
+    \item nu vei fi excelent peste tot, dar poți ajunge mai bun
+    \pause
+    \item ,,be yourself'' $\rightarrow$ ,,be your best self''
+    \pause
+    \item do, fail, learn
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Artistul din tine}
   \begin{itemize}
+    \pause
     \item naturalețe
+    \pause
     \item autenticitate
+    \pause
     \item consecvență
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Calități pentru un artist}
   \begin{itemize}
+    \pause
     \item observabilitate
+    \pause
     \item adaptabilitate
+    \pause
     \item creativitate
   \end{itemize}
 \end{frame}
@@ -194,15 +258,28 @@ razvan@rosedu.org}
 
 \begin{frame}{TODO}
   \begin{itemize}
+    \pause
     \item citește
+    \pause
     \item meditează
+    \pause
     \item greșește
   \end{itemize}
 \end{frame}
 
 \begin{frame}{De final}
   \begin{center}
-    Învață regulile. Urmărește regulile. Adaptează regulile. Redefinește regulile.
+    \pause
+    Învață regulile.\\
+    \vspace{0.5cm}
+    \pause
+    Urmărește regulile.\\
+    \vspace{0.5cm}
+    \pause
+    Adaptează regulile.\\
+    \vspace{0.5cm}
+    \pause
+    Redefinește regulile.
   \end{center}
 \end{frame}
 
