cuvintele-au-putere: Add resources and recommendations

--- a/cuvintele-au-putere/cuvintele-au-putere.tex
+++ b/cuvintele-au-putere/cuvintele-au-putere.tex
@@ -439,4 +439,17 @@ razvan.deaconescu@cs.pub.ro}
   \end{center}
 \end{frame}
 
+\begin{frame}{Resurse și recomandări}
+  \begin{itemize}
+    \item slide-urile prezentării: \url{https://www.slideshare.net/razvandeaconescu/cuvintele-au-putere}
+    \item Daniel Pink: A Whole New Mind: Why Right-Brainers Will Rule the Future
+    \item Daniel Pink: To Sell Is Human: The Surprising Truth About Moving Others
+    \item Robert Cialdini: Influence: The Psychology of Persuasion
+    \item Joe Navarro: What Every Body Is Saying
+    \item Mike Cernovich: Gorilla Mindset
+    \item film: Dead Poets Society (1989)
+    \item Charisma on Command: \url{https://www.youtube.com/user/charismaoncommand}
+  \end{itemize}
+\end{frame}
+
 \end{document}
