cuvintele-au-putere: Add reference to "The Art of Worldly Wisdom"

--- a/cuvintele-au-putere/cuvintele-au-putere.tex
+++ b/cuvintele-au-putere/cuvintele-au-putere.tex
@@ -446,6 +446,7 @@ razvan.deaconescu@cs.pub.ro}
     \item Daniel Pink: To Sell Is Human: The Surprising Truth About Moving Others
     \item Robert Cialdini: Influence: The Psychology of Persuasion
     \item Joe Navarro: What Every Body Is Saying
+    \item Baltasar Gracian y Morales: The Art of Worldly Wisdom
     \item Mike Cernovich: Gorilla Mindset
     \item film: Dead Poets Society (1989)
     \item Charisma on Command: \url{https://www.youtube.com/user/charismaoncommand}
