lucruri-care-conteaza: Remove SlideShare link

--- a/lucruri-care-conteaza/lucruri-care-conteaza.tex
+++ b/lucruri-care-conteaza/lucruri-care-conteaza.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[handout]{beamer}
 
 % Romanian Language support
 \usepackage{ucs}
@@ -255,7 +255,6 @@ razvan.deaconescu@cs.pub.ro}
     \pause \item e mai ușor să înlocuim pe cineva decât să transformăm pe cineva
     \pause \item modul de influență ține de noi, de ce facem, de ce model suntem; vorbitul e doar o formă de exprimare
     \pause \item noi trebuie să ne antrenăm pe noi, să ne îmbunătățim înainte de a cere asta de la ceilalți
-    \pause \item \url{https://www.slideshare.net/razvandeaconescu/lucruri-care-conteaz}
   \end{itemize}
 \end{frame}
 
