secretul-succesului: Add links and quotes

--- a/secretul-succesului/secretul-succesului.tex
+++ b/secretul-succesului/secretul-succesului.tex
@@ -53,6 +53,20 @@ razvan.deaconescu@cs.pub.ro}
   Vegeta Turns Super Sayian for the First Time: \url{https://www.youtube.com/watch?v=5trE1VD1GIo}
 \end{frame}
 
+%
+%
+% https://twitter.com/TheStoicEmperor/status/985091117321306113
+%
+%Overnight success is almost invariably preceded by years of invisible and unrewarded hard work.
+%
+%What about Zuckerberg? Spielberg?
+%
+%Spielberg directed a homemade feature film at 15, doing all his own special effects.
+%
+%Zuckerberg was building instant messaging programs at age 12.
+%
+%
+
 %\begin{frame}{Cuvinte}
 %  \pause
 %  \centering
