anti-eroi: Change date

--- a/anti-eroi/anti-eroi.tex
+++ b/anti-eroi/anti-eroi.tex
@@ -24,7 +24,7 @@
 \institute{ROSEdu}
 \author[Răzvan Deaconescu]{Răzvan Deaconescu \\
 razvan@rosedu.org}
-\date{19 iunie 2018}
+\date{19 mai 2018}
 
 \begin{document}
 
